Several fixes 1. Fix Popup Preview buttons overflow problem 2. Fix Open in New Tab not getting the latest URL 3. Add some checks to prevent browser errors

--- a/Common/preview_style.css
+++ b/Common/preview_style.css
@@ -83,6 +83,7 @@
     display: flex;
     align-items: center;
     margin-right: 10px;
+    overflow:hidden;
 }
 
 .link-preview-nav-controls button {
@@ -122,6 +123,7 @@
   white-space: nowrap;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 .link-preview-controls button, #link-preview-copy {
   background: transparent;
